Nodejs/Docker/K3S/Yaml/ingress-nginx-ns/ingress-rules/kube-node-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kube-node
  namespace: kube-node-lease
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: k8s.lzg-rpi.com
    http:
      paths:
      - path: /httpsrv-demo
        pathType: Prefix
        backend:
          service: 
            name: node-httpsrv-service
            port:
              number: 3000
  - host: hop-team.lzg-rpi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-hopteam-service
            port:
              number: 8081
